--- a/ubs/patient/templates/patient/detail.html
+++ b/ubs/patient/templates/patient/detail.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Cadastro de Paciente{% endblock %}
+{% block title %}Detalhes do Paciente{% endblock %}
 
 {% block body %}
     <div class="col-md-9 offset-md-1">
@@ -37,9 +37,11 @@
                     <li class="list-group-item">
                         Número do Endereço:<span class="pull-right"> {{ object.address_number}} </span>
                     </li>
-                    <li class="list-group-item">
-                        Complemento do endereço: <span class="pull-right"> {{ object.address_complement}} </span>
-                    </li>
+                    {% if object.address_complement %}
+                        <li class="list-group-item">
+                            Complemento do endereço: <span class="pull-right"> {{ object.address_complement}} </span>
+                        </li>
+                    {% endif %}
                     <li class="list-group-item">
                         Cep do endereço: <span class="pull-right"> {{ object.address_cep}} </span>
                     </li>
@@ -49,19 +51,22 @@
                     <li class="list-group-item">
                         Cidade: <span class="pull-right"> {{ object.City_codIBGE}} </span>
                     </li>
-                    <li class="list-group-item">
-                        Email: <span class="pull-right"> {{ object.email}} </span>
-                    </li>
+                    {% if object.email %}
+                        <li class="list-group-item">
+                            Email: <span class="pull-right"> {{ object.email}} </span>
+                        </li>
+                    {% endif %}
                     <li class="list-group-item">
                         Telefone: <span class="pull-right"> {{ object.get_phone}} </span>
                     </li>
                     <li class="list-group-item">
                         Tipo do Telefone: <span class="pull-right"> {{ object.get_phone_type}} </span>
                     </li>
-                    <li class="list-group-item">
-                        Imagem: <span class="pull-right"> <a href="/ubs/media_images/{{ object.image_patient }}" > Imagem do paciente <i class="fa fa-download"></i> </a> </span>
-                        
-                    </li>
+                    {% if object.image_patient %}
+                        <li class="list-group-item">
+                            Imagem: <span class="pull-right"> <a href="/ubs/media_images/{{ object.image_patient }}" > Imagem do paciente <i class="fa fa-download"></i> </a> </span>
+                        </li>
+                    {% endif %}
                     <li class="list-group-item">
                         Cor: <span class="pull-right"> {{ object.Color_idColor}} </span>
                     </li>
