--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -136,6 +136,8 @@
     <script src="{% static 'vendors/popper.js/dist/umd/popper.min.js'%}"></script>
     <script src="{% static 'vendors/bootstrap/dist/js/bootstrap.min.js'%}"></script>
     <script src="{% static 'assets/js/main.js'%}"></script>
+    <script src="{% static 'mask/dist/jquery.mask.js'%}"></script>
+    <script src="{% static 'mask/dist/jquery.mask.min.js'%}"></script>
 
 
     <script src="{% static 'vendors/chart.js/dist/Chart.bundle.min.js'%}"></script>
