--- a/ubs/core/templates/core/base.html
+++ b/ubs/core/templates/core/base.html
@@ -27,6 +27,7 @@
 
 
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/sweetalert.css' %}">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     {% block head %}
@@ -136,9 +137,8 @@
     <script src="{% static 'vendors/popper.js/dist/umd/popper.min.js'%}"></script>
     <script src="{% static 'vendors/bootstrap/dist/js/bootstrap.min.js'%}"></script>
     <script src="{% static 'assets/js/main.js'%}"></script>
-    <script src="{% static 'mask/dist/jquery.mask.js'%}"></script>
-    <script src="{% static 'mask/dist/jquery.mask.min.js'%}"></script>
 
+    <script src="{% static 'js/sweetalert.min.js' %}"></script>
 
     <script src="{% static 'vendors/chart.js/dist/Chart.bundle.min.js'%}"></script>
     <script src="{% static 'assets/js/dashboard.js'%}"></script>
@@ -146,6 +146,10 @@
     <script src="{% static 'vendors/jqvmap/dist/jquery.vmap.min.js'%}"></script>
     <script src="{% static 'vendors/jqvmap/examples/js/jquery.vmap.sampledata.js'%}"></script>
     <script src="{% static 'vendors/jqvmap/dist/maps/jquery.vmap.world.js'%}"></script>
+
+
+
+    
     <script>
         (function($) {
             "use strict";
