--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -8,7 +8,7 @@
     <div class="animated fadeIn">
         <form method="post">
             {% csrf_token %}
-                <div class="row">
+                <div class="row" id=query>
                     <div class="col-md-10" style="margin: 20px auto;">
                         <div class="card">
                             <div class="card-header"><strong>{{patient.full_name}}</strong>
@@ -89,83 +89,6 @@
                                 {% endfor %}
                             </div>
 
-                            <div id="3" , class="d-none">
-                                {% for field in third_form_class %}
-                                {% if field.errors %}
-                                
-                                <div class="col-md-12 margin-bottom-15">
-                                    
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error }}</span>
-                                    {% endfor%}
-                                </div>
-                                {%else%}
-                                <div class="col-md-12 margin-bottom-15">
-                                
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                </div>
-                                {%endif%}
-                                {% endfor %}
-                            </div>
-
-
-
-
-
-                            <div id="4" , class="d-none">
-                                {% for field in four_form_class %}
-                                {% if field.errors %}
-                                
-                                <div class="col-md-12 margin-bottom-15">
-                                    
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error }}</span>
-                                    {% endfor%}
-                                </div>
-                                {%else%}
-                                <div class="col-md-12 margin-bottom-15">
-                                
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                </div>
-                                {%endif%}
-                                {% endfor %}
-                            </div>
-
-
-                            <div id="5" , class="d-none">
-                                {% for field in five_form_class %}
-                                {% if field.errors %}
-                                
-                                <div class="col-md-12 margin-bottom-15">
-                                    
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error }}</span>
-                                    {% endfor%}
-                                </div>
-                                {%else%}
-                                <div class="col-md-12 margin-bottom-15">
-                                
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                </div>
-                                {%endif%}
-                                {% endfor %}
-                            </div>
-
 
 
 
@@ -178,11 +101,13 @@
                     
                     <div class="form-actions form-group col-md-4" style="margin-top:3%;">
                         <label onclick="back()"  class="btn btn-danger d-none" id="back" style="border-radius: 3px;">Voltar</label>
-                        <label  class="btn btn-primary" id="next" style="border-radius: 3px;" onclick="next()">Proximo</label>
-                        
-                        <button type="submit" class="btn btn-success d-none" id="finished" style="border-radius: 3px;">Finalizar</button>
+                        <label  class="btn btn-primary" id="next" style="border-radius: 3px;" onclick="next()">Proximo</label>                            
                     </div>
+                    <button type="submit" class="btn btn-success d-none" id="finished" style="border-radius: 3px;">Finalizar</button>
 
+
+
+                    </div>
 
                 </div>
             </div>
@@ -203,7 +128,7 @@
         document.getElementById(current).className= ""
         document.getElementById('back').className= "btn btn-danger"
         
-        if(current == 5){
+        if(current == 2){
             document.getElementById('finished').className="btn btn-success"
             document.getElementById('next').className="d-none"
         }
