--- a/ubs/medical_query/templates/querys/detail.html
+++ b/ubs/medical_query/templates/querys/detail.html
@@ -8,7 +8,7 @@
     <div class="animated fadeIn">
         <form method="post">
             {% csrf_token %}
-                <div class="row">
+                <div class="row" id=query>
                     <div class="col-md-10" style="margin: 20px auto;">
                         <div class="card">
                             <div class="card-header"><strong>{{patient.full_name}}</strong>
@@ -40,6 +40,7 @@
                                                 </div>
                                             
                                             {%else%}
+                                            {% if field.name != 'cid10' and field.name != 'examRequest' and field.name != 'medicine'  %}
                                                 <div
                                                     class="col-md-{% if field.name in 'summary\review_of_systems\main_complaint\current_health_history\type_query' %}12
                                                     {% elif field.name in 'epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
@@ -52,6 +53,7 @@
                                                     {{ field|add_class:"form-control input-md" }}
                                                     <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
                                                 </div>
+                                            {% endif %}
                                             {% endif %}
                                 {%endif%}
                                 {% endfor %}
@@ -90,83 +92,34 @@
                             </div>
 
                             <div id="3" , class="d-none">
-                                {% for field in third_form_class %}
-                                {% if field.errors %}
-                                
-                                <div class="col-md-12 margin-bottom-15">
-                                    
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error }}</span>
-                                    {% endfor%}
+
+                                <div class="col-md-12">
+                                    <br>
+                                    <h4 style="margin-bottom: 1%; font-weight: bold;">CID10</h4>
+                                    {% for cid in object.cid10.all %}
+                                        <label class="btn btn-warning btn-sm">{{cid}}</label>
+                                    {% endfor %}
                                 </div>
-                                {%else%}
-                                <div class="col-md-12 margin-bottom-15">
-                                
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+
+                                <div class="col-md-12">
+                                    <br>
+                                    <h4 style="margin-bottom: 1%; font-weight: bold;">Exames Solicitados</h4>
+                                    <ol class="col-md-10 " style="margin-left: 2%;">
+                                        {% for exam in object.examRequest.all %}
+                                            <li >{{exam}}</li>
+                                        {% endfor %}
+                                    </ol>
                                 </div>
-                                {%endif%}
-                                {% endfor %}
+                                
+                                
+                                <div class="col-md-12">
+                                    <br>
+                                    <h4 style="margin-bottom: 1%; font-weight: bold;">Medicamentos</h4>
+                                    {% for medicine in object.medicine.all %}
+                                    <label class="btn btn-primary btn-sm">{{medicine}}</label>
+                                    {% endfor %}
+                                </div>
                             </div>
-
-
-
-
-
-                            <div id="4" , class="d-none">
-                                {% for field in four_form_class %}
-                                {% if field.errors %}
-                                
-                                <div class="col-md-12 margin-bottom-15">
-                                    
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error }}</span>
-                                    {% endfor%}
-                                </div>
-                                {%else%}
-                                <div class="col-md-12 margin-bottom-15">
-                                
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                </div>
-                                {%endif%}
-                                {% endfor %}
-                            </div>
-
-
-                            <div id="5" , class="d-none">
-                                {% for field in five_form_class %}
-                                {% if field.errors %}
-                                
-                                <div class="col-md-12 margin-bottom-15">
-                                    
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error }}</span>
-                                    {% endfor%}
-                                </div>
-                                {%else%}
-                                <div class="col-md-12 margin-bottom-15">
-                                
-                                    <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                </div>
-                                {%endif%}
-                                {% endfor %}
-                            </div>
-
-
 
 
                         </div>
@@ -178,11 +131,10 @@
                     
                     <div class="form-actions form-group col-md-4" style="margin-top:3%;">
                         <label onclick="back()"  class="btn btn-danger d-none" id="back" style="border-radius: 3px;">Voltar</label>
-                        <label  class="btn btn-primary" id="next" style="border-radius: 3px;" onclick="next()">Proximo</label>
-                        
-                        <button type="submit" class="btn btn-success d-none" id="finished" style="border-radius: 3px;">Finalizar</button>
+                        <label  class="btn btn-primary" id="next" style="border-radius: 3px;" onclick="next()">Proximo</label>                            
                     </div>
 
+                    </div>
 
                 </div>
             </div>
@@ -203,8 +155,7 @@
         document.getElementById(current).className= ""
         document.getElementById('back').className= "btn btn-danger"
         
-        if(current == 5){
-            document.getElementById('finished').className="btn btn-success"
+        if(current == 3){
             document.getElementById('next').className="d-none"
         }
     }
@@ -220,7 +171,6 @@
             document.getElementById('back').className="d-none"
         }
         document.getElementById('next').className="btn btn-primary"
-         document.getElementById('finished').className="d-none"
         document.getElementById(current).className= ""
 
     }
