--- a/ubs/core/templates/core/menu_admin.html
+++ b/ubs/core/templates/core/menu_admin.html
@@ -46,6 +46,14 @@
             <a href=" {% url 'medical_query:list_CID' %}" class="dropdown-toggle" aria-haspopup="true"> <i
                     class="menu-icon fa fa-tasks"></i>CID10</a>
         </li>
+        <li class="menu-item-has-children dropdown">
+            <a href=" {% url 'medical_query:list_medicine' %}" class="dropdown-toggle" aria-haspopup="true"> <i
+                    class="menu-icon fa fa-tasks"></i>Medicamento</a>
+        </li>
+        <li class="menu-item-has-children dropdown">
+            <a href=" {% url 'medical_query:list_exam_request' %}" class="dropdown-toggle" aria-haspopup="true"> <i
+                    class="menu-icon fa fa-tasks"></i>Requisição de Exame</a>
+        </li>
         <h3 class="menu-title">Exames Físico</h3><!-- /.menu-title -->
         <li class="menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
