--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -1,5 +1,6 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
+{% load static %}
 
 {% block title %}Realizar Nova{% endblock %}
 
@@ -90,6 +91,52 @@
                             </div>
 
 
+                            <div id="3" class="d-none">
+                                <div class="card">
+                                    <div class="card-body" >
+                                        <table class="table table-striped table-bordered" id="usercommitee" class="link-formset">
+                                            <thead>
+                                                <tr>
+                                                    <th>Medicamento</th>
+                                                    <th>Quantidade</th>
+                                                    <th>Ação</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for has_medicine in third_form %}
+                                                    {% if has_medicine.errors %}
+                                                        <tr {% if not has_medicine.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
+                                                            {{ has_medicine.id }}
+                                                            <td>
+                                                                {{ has_medicine.Medicine_idMedicine|add_class:"form-control input-md" }}
+                                                            </td>
+                                                            <td>
+                                                                {{ has_medicine.amount|add_class:"form-control input-md" }}
+                                                                <span class="help-inline error">{{ has_medicine.has_medicine_number.errors}}</span>
+                                                            </td>
+                                                            <td>{{has_medicine.DELETE}}</td>
+                                                        </tr>
+                                                    {%else%}
+                                                        <tr {% if not has_medicine.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
+                                                            {{ has_medicine.id }}
+                                                            <td>
+                                                                {{ has_medicine.Medicine_idMedicine|add_class:"form-control input-md" }}
+                                                            </td>
+                                                            <td>
+                                                                {{ has_medicine.amount|add_class:"form-control input-md" }}
+                                                            </td>
+                                                            <td>{{has_medicine.DELETE}}</td>
+                                                        </tr>
+                                                    {%endif%}
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                        {{ third_form.management_form }}
+                                    </div>
+                                </div>
+                            </div>
+
+
 
 
                         </div>
@@ -128,7 +175,7 @@
         document.getElementById(current).className= ""
         document.getElementById('back').className= "btn btn-danger"
         
-        if(current == 2){
+        if(current == 3){
             document.getElementById('finished').className="btn btn-success"
             document.getElementById('next').className="d-none"
         }
@@ -145,11 +192,26 @@
             document.getElementById('back').className="d-none"
         }
         document.getElementById('next').className="btn btn-primary"
-         document.getElementById('finished').className="d-none"
+        document.getElementById('finished').className="d-none"
         document.getElementById(current).className= ""
 
     }
 
+</script>
+
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.formset.js' %}"></script>
+<script>
+    $('#usercommitee tbody tr').formset({
+        prefix: '{{ third_form_class.prefix }}',
+        addText: '<i class="menu-icon fa fa-plus-square-o"></i> Adicionar',
+        addCssClass: 'btn btn-success adicionar',
+        deleteText: '<i class="menu-icon fa fa-trash"></i>',
+        deleteCssClass: 'btn btn-danger',
+        deleteCssClass: 'delete-row',
+        formCssClass: 'dynamic-form', 
+
+    });
 </script>
 
 {% endblock %}
