--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -124,7 +124,7 @@
                                                                 {{ has_medicine.medicine|add_class:"form-control input-md" }}
                                                             </td>
                                                             <td>
-                                                                {{ has_medicine.amount|add_class:"form-control input-md" }}
+                                                                {{ has_medicine.amount|add_class:"form-control input-md",  }}
                                                             </td>
                                                             <td>{{has_medicine.DELETE}}</td>
                                                         </tr>
