--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -45,7 +45,6 @@
                                                     class="col-md-{% if field.name in 'summary\review_of_systems\main_complaint\current_health_history\type_query' %}12
                                                     {% elif field.name in 'epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
                                                     {% elif field.name in 'physical_exam\pa_exam\p_exam\fc_exam\fr_exam\tax_exam\peso_exam\heigth_exam' %}3         
-
                                                     {% else %}6
                                                     {% endif %} margin-bottom-15">
 
@@ -124,7 +123,7 @@
                                                                 {{ has_medicine.medicine|add_class:"form-control input-md" }}
                                                             </td>
                                                             <td>
-                                                                {{ has_medicine.amount|add_class:"form-control input-md",  }}
+                                                                {{ has_medicine.amount|add_class:"form-control input-md" }}
                                                             </td>
                                                             <td>{{has_medicine.DELETE}}</td>
                                                         </tr>
