--- a/ubs/core/templates/core/menu_medical.html
+++ b/ubs/core/templates/core/menu_medical.html
@@ -24,8 +24,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-exclamation-triangle"></i>CID10</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_CID' %}">Novo CID10</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_CID' %}">Ver CIDs10</a></li>
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_CID' %}"target="_blank">Novo CID10</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_CID' %}"target="_blank">Ver CIDs10</a></li>
             </ul>
         </li>
 
@@ -34,8 +34,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-medkit"></i>Medicamentos</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_medicine' %}">Novo Medicamento</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_medicine' %}">Ver Medicamentos</a>
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_medicine' %}"target="_blank">Novo Medicamento</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_medicine' %}"target="_blank">Ver Medicamentos</a>
                 </li>
             </ul>
         </li>
@@ -44,8 +44,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-stethoscope"></i>Exames</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_exam_request' %}">Novo Exame</a></li>
-                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_exam_request' %}">Ver Exames</a>
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:add_exam_request' %}" target="_blank">Novo Exame</a></li>
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_exam_request' %}" target="_blank">Ver Exames</a>
                 </li>
             </ul>
         </li>
