--- a/ubs/accounts/templates/users/clerk/edit.html
+++ b/ubs/accounts/templates/users/clerk/edit.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Editar Usuário{% endblock %}
+{% block title %}Editar Usuário Técnico{% endblock %}
 
 {% block body %}
 <div class="content col-md-12">
