--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -18,7 +18,12 @@
                                 <a href="{% url 'medical_query:cancel_query' patient_pk forwarding_pk %}">
                                     <label class="btn btn-danger" style="margin-left: 70%; font-size: 12px; border-radius: 2px;">CANCELAR</label>
                                 </a>
-                            </div>
+                                {% if last_query %}
+                                    <p>Última consulta em {{last_query}}</p>
+                                {% else %}
+                                    <p>Primeira Consulta</p>
+                                {% endif %}
+                                </div>
                     <fieldset>
 
                         <div class="form-group">
@@ -205,7 +210,7 @@
 
 <script>
 
-
+    javascript:window.history.forward(1);
 
     let current = 1
 
